--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   },
   "dependencies": {
     "vue": "^2.2.2",
-    "vue-router": "^2.3.0"
+    "vue-router": "^2.3.0",
+    "font-awesome": "^4.7.0",
+    "vue-resource": "^1.2.1",
+    "mint-ui": "^2.2.3",
+    "vue-video-player":"^3.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -58,6 +62,8 @@
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.4",
+    "less-loader": "^4.0.3",
+    "less": "^2.3.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
